更新说明文件